--- a/src/md/正则.md
+++ b/src/md/正则.md
@@ -1,4 +1,6 @@
 ## 正则表达式
+* 由普通字符（a-z0-9）和特殊字符（元字符）组成的文字模式
+* 例子参考 src/components/js/正则表达式.js
 ---
 * [菜鸟链接](https://www.runoob.com/regexp/regexp-tutorial.html)
 * [ruanyifeng链接](https://www.liaoxuefeng.com/wiki/1016959663602400/1017639890281664)
@@ -15,3 +17,20 @@
 * [a-z0-9_-] 字母(a-z) 数字(0-9) 下划线_ 连接线-
 * {3-15} 字符长度
  
+### 非打印字符
+* \n 换行符
+* \s 匹配任何空白符 包括空格，制表符（\t），换页符（\f）等等
+* \S 匹配任何非空白符
+
+### 特殊字符
+* $ 匹配输入字符串的结束位置
+* () 标记一个子表达式开始结束位置
+* '*' 匹配前面的子表达式0次或多次
+* ‘+’ 匹配前面的子表达式1次或多次
+* ‘.’ 匹配除换行符\n以外的任何字符
+* ‘?’ 匹配前面子表达式0次或1次
+* '^' 匹配输入字符串开始位置，当该符号在方括号表达式中使用时，表示不接受该方括号表达式中的字符集合
+* '{' 标记限定符表达式的开始
+* '|' 指明两项之间的一个选择
+* \w 查找单词字符
+* \d 查找数字
