--- a/src/md/vue/深入响应式原理.md
+++ b/src/md/vue/深入响应式原理.md
@@ -1,10 +1,11 @@
 ## 深入响应式原理
 
 ### 如何追踪变化
-* 当把一个普通的js对象传入Vue实例作为data选项，Vue将遍历此对象的所有property，并使用 Object.defineProperty 把这些 property 全部转为 getter/setter  
+* 当把一个普通的js对象传入Vue实例作为data选项，Vue将遍历此对象的所有property，并使用 Object.defineProperty   
+  把这些 property 全部转为 getter/setter  
   这些 getter setter 对用户不可见，但是在内部能够让 Vue 追踪依赖，在 property 被访问和修改时通知变更。
-* 每个组件实例对应一个watcher实例，它会在组件渲染过程中把接触过的数据property记录为依赖，之后当依赖项的setter触发时，会通知watcher，  
-  从而使它关联的组件重新渲染。
+* 每个组件实例对应一个watcher实例，它会在组件渲染过程中把接触过的数据property记录为依赖，之后当依赖项的setter触发时，  
+  会通知watcher，从而使它关联的组件重新渲染。
 
 ### 添加响应式 property 
 * Vue.set(vm.obj, 'b', 2)
